Versioning     : Support JPEG-XL, HEIF, WEBP, and AVIF as lossless image format to store versionned images in editor.
Usability      : Add hamburger menu to tool-bar if main menu is hidden.
Metadata       : Add new option to write metadata to files with ExifTool backend.
Metadata       : Optional write metadata operations to DNG and RAW files are now always delegated to ExifTool Backend.
Advanced Rename: Add increment file counter to sequence numbering with option [c] or [c,step].
Advanced Rename: Add random text sequence numbering with option [r].
Advanced Rename: Add configurable first character for the unique modifier with {unique:n,c}.
Advanced Search: Add search for items by number of face regions.
Advanced Search: Add search for items without face regions.
Collections    : Add support for cross-platform network paths.
General        : Add spell-checking in caption text widget using KF5::Sonnet component.

*****************************************************************************************************
BUGFIXES:

001 ==> 416704 - Port digiKam to Qt6 and KF6 API.
002 ==> 450153 - All groups deleted by "Extended clean up and shrink all databases".
003 ==> 450518 - Crash when opening Advanced Search.
004 ==> 450467 - digiKam git source build fails.
005 ==> 450642 - Provide an option to open the light table after click on thumbnail.
006 ==> 450643 - Expose menus optionally in the toolbar : burger main menu feature.
007 ==> 451017 - Search by time of day.
008 ==> 349268 - Be able to copy and paste the uploaded url to ImgUr web service.
009 ==> 451525 - Maintenance tool dialog should not keep potentially destructive operations checked by default.
010 ==> 251424 - Include gpx overlays found in albums.
011 ==> 451802 - GPX files fails to load.
012 ==> 219856 - Exiv2 destroys RAW/DNG files when editing IPTC - Use ExifTool instead.
013 ==> 219856 - Exiv2 destroys RAW/DNG files when editing IPTC - Use ExifTool instead.