@@ -4,8 +4,8 @@
  * https://www.digikam.org
  *
  * Date        : 2007-10-18
- * Description : a widget to edit a tag with multiple alternative
- *               language string entries.
+ * Description : a widget to edit multiple alternative
+ *               language string entries with an activation checkbox.
  *
  * Copyright (C) 2007-2022 by Gilles Caulier <caulier dot gilles at gmail dot com>
  * Copyright (C) 2013      by Victor Dodon <dodonvictor at gmail dot com>
@@ -33,7 +33,6 @@
 
 #include "squeezedcombobox.h"
 #include "metadatacheckbox.h"
-#include "altlangstredit.h"
 
 namespace DigikamGenericMetadataEditPlugin
 {
@@ -43,33 +42,22 @@ class Q_DECL_HIDDEN AltLangStringsEdit::Private
 public:
 
     explicit Private()
-      : valueCheck(nullptr),
-        editor    (nullptr)
+      : valueCheck(nullptr)
     {
     }
 
     DMetadata::AltLangMap oldValues;
     MetadataCheckBox*     valueCheck;
-    AltLangStrEdit*       editor;
 };
 
 AltLangStringsEdit::AltLangStringsEdit(QWidget* const parent, const QString& title, const QString& desc)
-    : QWidget(parent),
+    : AltLangStrEdit(parent),
       d      (new Private)
 {
-    d->valueCheck = new MetadataCheckBox(title, this);
-    d->editor     = new AltLangStrEdit(this);
-    d->editor->setPlaceholderText(desc);
-
-    // --------------------------------------------------------
-
-    QGridLayout* const grid = new QGridLayout(this);
-    grid->setAlignment(Qt::AlignTop);
-    grid->addWidget(d->valueCheck, 0, 0, 1, 1);
-    grid->addWidget(d->editor,     1, 0, 1, 1);
-    grid->setSpacing(qMin(QApplication::style()->pixelMetric(QStyle::PM_LayoutHorizontalSpacing),
-                          QApplication::style()->pixelMetric(QStyle::PM_LayoutVerticalSpacing)));
-    grid->setContentsMargins(QMargins());
+    d->valueCheck = new MetadataCheckBox(title, parent);
+    setLinesVisible(4);
+    setPlaceholderText(desc);
+    setTitleWidget(d->valueCheck);
 
     // --------------------------------------------------------
 
@@ -77,25 +65,25 @@ AltLangStringsEdit::AltLangStringsEdit(QWidget* const parent, const QString& tit
             this, SIGNAL(signalToggled(bool)));
 
     connect(d->valueCheck, SIGNAL(toggled(bool)),
-            d->editor, SLOT(setEnabled(bool)));
+            this, SLOT(slotEnabledInternalWidgets(bool)));
 
     connect(d->valueCheck, SIGNAL(toggled(bool)),
             this, SIGNAL(signalModified()));
 
-    d->editor->setEnabled(d->valueCheck->isChecked());
+    slotEnabledInternalWidgets(d->valueCheck->isChecked());
 
     // --------------------------------------------------------
 
-    connect(d->editor, SIGNAL(signalModified(QString,QString)),
+    connect(this, SIGNAL(signalModified(QString,QString)),
             this, SIGNAL(signalModified()));
 
-    connect(d->editor, SIGNAL(signalValueAdded(QString,QString)),
+    connect(this, SIGNAL(signalValueAdded(QString,QString)),
             this, SIGNAL(signalModified()));
 
-    connect(d->editor, SIGNAL(signalValueDeleted(QString)),
+    connect(this, SIGNAL(signalValueDeleted(QString)),
             this, SIGNAL(signalModified()));
 
-    connect(d->editor, SIGNAL(signalSelectionChanged(QString)),
+    connect(this, SIGNAL(signalSelectionChanged(QString)),
             this, SLOT(slotSelectionChanged(QString)));
 }
 
@@ -118,25 +106,16 @@ bool AltLangStringsEdit::isValid() const
 void AltLangStringsEdit::setValues(const DMetadata::AltLangMap& values)
 {
     d->oldValues = values;
-    d->editor->setValues(values);
+    AltLangStrEdit::setValues(values);
 }
 
-bool AltLangStringsEdit::getValues(DMetadata::AltLangMap& oldValues, DMetadata::AltLangMap& newValues)
+bool AltLangStringsEdit::getValues(DMetadata::AltLangMap& oldValues,
+                                   DMetadata::AltLangMap& newValues) const
 {
     oldValues = d->oldValues;
-    newValues = d->editor->values();
+    newValues = values();
 
     return d->valueCheck->isChecked();
-}
-
-QString AltLangStringsEdit::defaultAltLang() const
-{
-    return d->editor->defaultAltLang();
-}
-
-bool AltLangStringsEdit::asDefaultAltLang() const
-{
-    return d->editor->asDefaultAltLang();
 }
 
 void AltLangStringsEdit::slotSelectionChanged(const QString& lang)
