@@ -11,6 +11,7 @@ Versioning     : Support JPEG-XL, HEIF, WEBP, and AVIF as lossless image format 
 Usability      : Add hamburger menu to tool-bar if main menu is hidden.
 Metadata       : Add new option to write metadata to files with ExifTool backend.
 Metadata       : Optional write metadata operations to DNG and RAW files are now always delegated to ExifTool Backend.
+Metadata       : Optimize layout of Metadata Edit plugin for a better usability.
 Advanced Rename: Add increment file counter to sequence numbering with option [c] or [c,step].
 Advanced Rename: Add random text sequence numbering with option [r].
 Advanced Rename: Add configurable first character for the unique modifier with {unique:n,c}.
